--- a/index.html
+++ b/index.html
@@ -87,22 +87,23 @@
 
         <h1>To-Do List</h1>
         <div class="kanban-board">
-            <div class="kanban-column" id="to-do-column">
+            <div class="kanban-column">
                 <h2>To Do</h2>
                 <div class="kanban-items" id="to-do"></div>
                 <button onclick="addItem('to-do')">Add Item</button>
             </div>
-            <div class="kanban-column" id="in-progress-column">
+            <div class="kanban-column">
                 <h2>In Progress</h2>
                 <div class="kanban-items" id="in-progress"></div>
             </div>
-            <div class="kanban-column" id="done-column">
+            <div class="kanban-column">
                 <h2>Done</h2>
                 <div class="kanban-items" id="done"></div>
             </div>
         </div>
 
         <button id="save-button">Save</button>
+        <input type="file" id="upload" />
     </div>
 
     <script src="scripts.js"></script>
